fixed progress bar not showing up

--- a/pages/styles/index.css
+++ b/pages/styles/index.css
@@ -58,3 +58,14 @@ h6 {
 .gradient {
   background-image: linear-gradient(135deg, #684ca0 35%, #1c4ca0 100%);
 }
+
+#nprogress {
+  pointer-events: none;
+}
+
+#nprogress .bar {
+  @apply bg-primary-default;
+  @apply fixed top-0 left-0;
+  @apply z-50;
+  @apply w-full h-1;
+}
